--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -7,7 +7,7 @@
    <%- include('../includes/navigation.ejs') %>
 
     <main>
-        <form class="product-form" action="/admin/<% editing ? 'edit-product' : 'add-product' %>" method="POST">
+        <form class="product-form" action="/admin/<%= editing ? 'edit-product' : 'add-product' %>" method="POST">
             <div class="form-control">
                 <label for="title">Title</label>
                 <input type="text" name="title" id="title" value="<%= editing ? product.title : '' %>">
@@ -22,8 +22,11 @@
             </div>
             <div class="form-control">
                 <label for="description">Description</label>
-                <textarea name="description" id="description" rows="5"><%= editing ? product.title : '' %></textarea>
+                <textarea name="description" id="description" rows="5"><%= editing ? product.description : '' %></textarea>
             </div>
+            <% if (editing) { %>
+                <input type="hidden" name="productID" value="<%= product.id %>">
+            <% } %>
 
             <button class="btn" type="submit"><%= editing ? 'Edit Product' : 'Add Product'; %></button>
         </form>
